--- a/app/sass/base/_variables.scss
+++ b/app/sass/base/_variables.scss
@@ -1,6 +1,7 @@
 $bold: 'Helvetica Neue Bold', sans-serif;
 $light: 'Helvetica Neue Light', sans-serif;
 $regular: 'Helvetica Neue Regular', sans-serif;
+$step-font: 'Georgia Bold', serif;
 
 $slow-transition: 230ms ease-in-out;
 
