--- a/app/sass/sections/_approach.scss
+++ b/app/sass/sections/_approach.scss
@@ -1,3 +1,103 @@
 .approach {
     background-color: $light-grey-1;
+    padding: 7rem 0;
+
+    &__list {
+        margin-top: 4rem;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        counter-reset: count;
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+        box-shadow: -1px -1px 10px 1px rgba(214, 214, 214, 1);
+        background-color: #fff;
+        width: 100%;
+        border-radius: 2px;
+
+        &:not(:last-child) {
+            margin-bottom: 3.8rem;
+        }
+
+        &:nth-child(2n) {
+            flex-direction: row-reverse;
+        }
+
+        &:nth-child(2n) .approach__step {
+            right: auto;
+            left: -5rem;
+        } 
+
+        &:nth-child(2n) .approach__content {
+            align-items: flex-end;
+            padding: 6rem 8rem 6rem 6rem;
+        }   
+    }
+
+    &__img-box {
+        width: 33.8rem;
+        height: 23.5rem;
+        position: relative;
+    }
+
+    &__step {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 29rem;
+        width: 10rem;
+        height: 10rem;
+        box-shadow: inset 0 0 0 2px #fff;
+        border-radius: 5px;
+        background-color: $red;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        font-family: $regular;
+        font-size: 1.6rem;
+
+        &::before {
+            content: counter(count);
+            counter-increment: count;
+            font-family: $step-font;
+            font-size: 3rem;
+            line-height: 1;
+            color: #fff;
+        } 
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
+    }
+
+    &__content {
+        padding: 6rem 6rem 6rem 8rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        color: $dark-grey-2;     
+    }
+
+    &__heading {
+        font-family: $bold;
+        font-size: 1.8rem;
+        margin-bottom: 1rem;
+    }
+
+    &__description {
+        font-family: $regular;
+        font-size: 1.4rem;
+        line-height: 1.5;
+        max-width: 53rem;
+        text-align: justify;
+    }
 }
