Work Section added

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -13,6 +13,7 @@
 @import "sections/hero";
 @import "sections/aboutus";
 @import "sections/approach";
+@import "sections/work";
 
 @import "components/contacts";
 @import "components/nav";
