--- a/app/sass/components/_section-heading.scss
+++ b/app/sass/components/_section-heading.scss
@@ -5,6 +5,10 @@
     align-items: center;
     color: $dark-grey-2;
 
+    &--work {
+        color: #fff;
+    }
+
     &__main {
         font-family: $bold;
         font-size: 3.6rem;
@@ -27,6 +31,12 @@
             bottom: 0;
             left: 50%;
             margin-left: -2.3rem;
+        }
+
+        &--work {
+            &::after {
+                background-color: #fff;
+            }
         }
     }
 }
