--- a/app/sass/components/_contacts.scss
+++ b/app/sass/components/_contacts.scss
@@ -1,15 +1,23 @@
 .contacts {
     background-color: $light-grey-1;
+    border-bottom: 1px solid #e2e2e2;
 
     &__list {
         list-style: none;
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        padding: 1rem 0;
     }
 
     &__item {
+        padding: 1rem 0;
+
+        &:first-child {
+            margin-right: 4rem;
+            border-right: 1px solid #e2e2e2;
+            padding-right: 2rem;
+        }
+
         &:not(:last-child) {
             margin-right: 2rem;
         }
