--- a/app/sass/components/_section-heading.scss
+++ b/app/sass/components/_section-heading.scss
@@ -5,7 +5,8 @@
     align-items: center;
     color: $dark-grey-2;
 
-    &--work {
+    &--work,
+    &--cta {
         color: #fff;
     }
 
@@ -36,6 +37,12 @@
         &--work {
             &::after {
                 background-color: #fff;
+            }
+        }
+
+        &--cta {
+            &::after {
+                display: none;
             }
         }
     }
