--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -14,8 +14,11 @@
 @import "sections/aboutus";
 @import "sections/approach";
 @import "sections/work";
+@import "sections/cta";
 
 @import "components/contacts";
 @import "components/nav";
 @import "components/btn";
+@import "components/btn-down";
 @import "components/section-heading";
+@import "components/form";
