Media Queries added

--- a/app/sass/components/_btn.scss
+++ b/app/sass/components/_btn.scss
@@ -28,4 +28,22 @@
         padding: 1rem 2rem;
         transition: background-color $slow-transition;
     }
+
+    &--footer {
+        border: 2px solid #515151;
+        color: #fff;
+        background-color: transparent;
+        font-family: $bold;
+        font-size: 1.7rem;
+        padding: 1rem 2rem;
+        transition: border-color $slow-transition;
+        display: inline-block;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+
+        &:hover {
+            border-color: $red;
+        }
+    }
 }
