--- a/app/sass/components/_form.scss
+++ b/app/sass/components/_form.scss
@@ -18,6 +18,10 @@
         border-right: 5rem solid transparent;        
         border-bottom: 5rem solid #fff;
     }
+
+    @include respond(tab-port) {
+        width: 90%;
+    }
 }
 
 .form {
@@ -31,15 +35,24 @@
     background-color: #fff;
     position: relative;
 
+    @include respond(phone) {
+        padding: 2rem 1rem;
+    }
+
     &__group {
         width: 65%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
     
     &__header {
+        max-width: 57rem;
         color: $light-grey-2;
         font-family: $light;
         font-size: 1.5rem;
