--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -15,6 +15,7 @@
 @import "sections/approach";
 @import "sections/work";
 @import "sections/cta";
+@import "sections/footer";
 
 @import "components/contacts";
 @import "components/nav";
