--- a/app/sass/sections/_aboutus.scss
+++ b/app/sass/sections/_aboutus.scss
@@ -14,9 +14,26 @@
         width: 33.33333%;
         padding: 0 4rem;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        @include respond(tab-port) {
+            width: 50%;
+            
+            &:not(:last-child) {
+                margin-bottom: 2rem;
+            }
+
+            &:last-child {
+                flex: 1;
+            }
+        }
+
+        @include respond(phone) {
+            width: 100%;
+        }
     }
 
     &__heading {
