--- a/app/sass/sections/_approach.scss
+++ b/app/sass/sections/_approach.scss
@@ -26,6 +26,10 @@
 
         &:nth-child(2n) {
             flex-direction: row-reverse;
+
+            @include respond(phone) {
+                flex-direction: column;
+            }
         }
 
         &:nth-child(2n) .approach__step {
@@ -36,7 +40,16 @@
         &:nth-child(2n) .approach__content {
             align-items: flex-end;
             padding: 6rem 8rem 6rem 6rem;
+
+            @include respond(phone) {
+                align-items: flex-start;
+                padding: 2rem;
+            }
         }   
+
+        @include respond(phone) {
+            flex-direction: column;
+        }
     }
 
     &__img-box {
@@ -71,6 +84,14 @@
             line-height: 1;
             color: #fff;
         } 
+
+        @include respond(tab-port) {
+            left: 20rem;
+        }
+
+        @include respond(phone) {
+            display: none;
+        }
     }
 
     &__img {
@@ -85,6 +106,10 @@
         justify-content: center;
         align-items: flex-start;
         color: $dark-grey-2;     
+
+        @include respond(phone) {
+            padding: 2rem;
+        }
     }
 
     &__heading {
