--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -39,6 +39,14 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;  
+
+    @media only screen and (max-width: 992px) {
+        font-size: 57%;
+    }
+
+    @media only screen and (max-width: 600px) {
+        font-size: 50%;
+    }
 }
 
 
