--- a/app/sass/components/_nav.scss
+++ b/app/sass/components/_nav.scss
@@ -4,12 +4,22 @@
     &__wrapper {
         display: flex;
         flex-wrap: wrap;
+
+        @include respond(tab-port) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     &__logo-link {
         display: flex;
         align-items: center;
         text-decoration: none;
+
+        @include respond(tab-port) {
+            margin-bottom: 2rem;
+        }
     }
 
     &__logo-icon {
@@ -41,14 +51,29 @@
     &__list {
         list-style: none;
         display: flex;
+        flex-wrap: wrap;
         justify-content: flex-end;
         align-items: center;
         margin-left: auto;
+
+        @include respond(tab-port) {
+            justify-content: center;
+            margin-left: 0;
+        }
+
+        @include respond(phone) {
+            flex-direction: column;
+        }
     }
 
     &__item {
         &:not(:last-child) {
             margin-right: 1.5rem;
+
+            @include respond(tab-port) {
+                margin-bottom: 2rem;
+                margin-right: 0;
+            }
         }
     }
 
