--- a/app/sass/sections/_hero.scss
+++ b/app/sass/sections/_hero.scss
@@ -18,6 +18,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
 
         &--sm {
             font-family: $bold;
