--- a/app/sass/components/_form.scss
+++ b/app/sass/components/_form.scss
@@ -1,4 +1,5 @@
 .form-container {
+    display: none;
     width: 66%;
     position: relative;
     margin: 0 auto;
@@ -105,4 +106,8 @@
             background-color: lighten($red, 10%);
         }
     }
+}
+
+.pop-up {
+    animation: bouncy-slide-down .5s ease-in-out;
 }
