--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -9,6 +9,7 @@
 @import "base/fonts";
 @import "base/variables";
 @import "base/mixins";
+@import "base/animations";
 
 @import "sections/hero";
 @import "sections/aboutus";
